--- a/delivery-app/public/index.html
+++ b/delivery-app/public/index.html
@@ -21,7 +21,7 @@
             <input type="text" id="nombre" placeholder="Tu nombre" required />
           </label>
 
-          <label>Pedido1
+          <label>Pedido
             <input type="text" id="pedido" placeholder="Ej: Pizza hawaiana" required />
           </label>
 
