--- a/delivery-app/public/index.html
+++ b/delivery-app/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Delivery App</h1>
+    <h1>Delivery App Nuevo Commit</h1>
     <p>Realiza un pedido y consulta el historial.</p>
   </header>
 
